Fix code not aligning well in Markdown

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -151,6 +151,9 @@ h4.divider {
   code { 
     @apply bg-zinc-300 rounded-md text-black p-1 font-mono text-base;
   }
+  pre > code {
+    @apply p-0;
+  }
   table { 
     @apply mt-8 mb-8 w-full text-sm text-left dark:text-gray-50 font-normal break-words;
   }
